# bachelor

./: .clang-format  .cproject  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  CMakeLists.txt  Dockerfile  MCU.Dockerfile  Qt.Dockerfile  README.md  README.org  Tex.Dockerfile  bachelor.code-workspace  out.json  requirements.txt
.github/workflows/: build-mcu.yml  build-qt.yml  build-tex.yml
CarQt/: CMakeLists.txt  README.md  README.org
CarQt/Resources/: resources.qrc  style.qss
CarQt/Src/: GameController.cpp  GameController.h  Image.cpp  Image.h  OldUtils.cpp  OldUtils.h  Recording.cpp  Recording.h  Settings.cpp  Settings.h  UdpClient.cpp  UdpClient.h  Utils.cpp  Utils.h  main.cpp
CarQt/Src/Client/: BaseClient.cpp  BaseClient.h  SerialClient.cpp  SerialClient.h  UdpClient.cpp  UdpClient.h
CarQt/Src/Window/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SensorsDialog.cpp  SensorsDialog.h  SensorsDialog.ui  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui
CarQt/Src/oldUi/: mainwindow.cpp  mainwindow.h  mainwindow.ui  pidwindow.cpp  pidwindow.h  pidwindow.ui
CarQt/src/: Utils.cpp  Utils.h  main.cpp
CarQt/src/client/: SerialClient.cpp  SerialClient.h  UdpClient.cpp
CarQt/src/window/: MainWindow.h
Chapters/: CarModel.tex  End.tex  Filters.tex  PlatformControl.tex  SpeedOptimization.tex
Data/: 1LapAuto.json  1LapAutoFiltered.json  AutoData.json  AutoDataFiltered.json  Chebyshev2.json  Data.json  FourStage.json  LastAuto.json  LastManual.json  LastSensors.json  LowPassChebyshev2poleFilter.json  LowPassChebyshev4spoleFilter.json  MovingAverage.json  MovingAverageFilter.json  NoFilter.json  RecursiveFourStageLowPassFilter.json  SinglePole.json  SinglePoleRecursiveFilter.json  Smyk.json  Speed.json  TestData.json  TestDataFiltered.json  TurnLeft.json  WindowedSincFilter.json  laps.csv
MCU/: .cproject  .gitignore  .project  CMakeLists.txt  README.md
MCU/accel/: fsl_fxos.c  fsl_fxos.h
MCU/drivers/: fsl_adc16.c  fsl_adc16.h  fsl_ftm.c  fsl_ftm.h  fsl_pit.c  fsl_pit.h  fsl_sysmpu.c  fsl_sysmpu.h
MCU/scripts/: linker.ld  linker_library.ld  linker_memory.ld
MCU/source/: Car.cpp  Car.h  Core.cpp  Core.h  Enet.cpp  Enet.h  Filter.cpp  Filter.h  I2C.cpp  I2C.h  IMU.cpp  IMU.h  LineTracer.cpp  LineTracer.h  PID.cpp  PID.h  Utils.h  cpp_config.cpp  main.cpp
MCU/source/Sensor/: BaseSensor.cpp  BaseSensor.h  FXAS21002.cpp  FXAS21002.h  FXOS8700CQ.cpp  FXOS8700CQ.h  IRSensor.cpp  IRSensor.h
MCU/source/sensors/: BaseSensor.h
MCU/tfc/: tfc.cpp  tfc.h  tfc_config.h  tfc_k6xf.cpp  tfc_k6xf.h
Notebooks/: Filters.ipynb  Lap.ipynb  Sensors.ipynb
Shared/: .cproject  CMakeLists.txt  README.md  README.org
Shared/Include/: CameraData.h  CarMath.h  Data.h  Defines.h  Image.cpp  Image.h  ImageType.h  Mode.h  MotorData.h  MotorState.h  PIDData.h  README.md  Region.h  SensorData.h  Settings.h  SteerData.h  TVec.h  UdpControl.h  UdpData.h  Vec.h
Shared/Include/Shared/: CameraData.h  Data.h  Filter.h  Image.h  Mode.h  MotorData.h  MotorState.h  Network.h  PIDData.h  Region.h  SensorData.h  Settings.h  Signal.h  SteerData.h  Utils.h  Vec.h
Shared/Src/: Filter.cpp  Image.cpp  PIDData.cpp  Region.cpp  Settings.cpp  Signal.cpp  Utils.cpp
Text/: BachelorThesis.lol  BachelorThesis.tex  README.md  README.org  biblatex.bib
Text/Chapters/: CarModel.tex  End.tex  Experiments.tex  Filters.tex  Introduction.tex  PlatformCommunication.tex  PlatformControl.tex  Sensors.tex  SensorsCommunication.tex  SpeedOptimization.tex  Testing.tex  Theory.tex
Text/Figures/: car.HEIC
Utilities/: ApplyFilter.cpp  CMakeLists.txt
carui/: CMakeLists.txt  baseclient.cpp  mainwindow.cpp  mainwindow.h  serialclient.cpp  serialclient.h  udpclient.cpp  udpclient.h
common/: Vec.h
mcu/: .cproject  .project  README.org
mcu/source/: Car.h  Enet.cpp
mcu/source/sensors/: BaseSensor.cpp  FXAS21002.cpp  FXOS8700CQ.cpp  FXOS8700CQ.h
shared/: CMakeLists.txt
source/: Enet.cpp  Enet.h  Pin.cpp  Pin.h  gai0010_bachelor.cpp  interrupt.cpp  main.cpp
source/enet/: Enet.cpp  Enet.h
source/sensors/: ASensor.cpp  ASensor.h  FXAS21002.cpp  FXAS21002.h  FXOS8700CQ.cpp  FXOS8700CQ.h
src/lib/: .cproject  .project  CMakeLists.txt  Vec.cpp  Vec.h
src/mcu/: .cproject
src/mcu/source/: Car.cpp  Car.h  Enet.h  main.cpp
src/mcu/source/sensors/: ASensor.cpp  ASensor.h  BaseSensor.cpp  BaseSensor.h  FXAS21002.cpp  FXAS21002.h  FXOS8700CQ.cpp  FXOS8700CQ.h
src/mcu/usb/host/: usb_host_ehci.c
src/ui/: App.cpp  App.h  CMakeLists.txt  Settings.cpp  Settings.h  assets.qrc  main.cpp
src/ui/assets/: main.qml
src/ui/client/: BaseClient.cpp  BaseClient.h  SerialClient.cpp  SerialClient.h  UdpClient.cpp  UdpClient.h  baseclient.cpp  baseclient.h  serialclient.cpp  serialclient.h  udpclient.h
src/ui/window/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui
text/Chapters/: Introduction.tex
